# applet-window-appmenu6

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt  appmenuapplet.cpp  appmenuapplet.h  decorationpalette.cpp
package/: metadata.desktop  metadata.json
package/contents/ui/: Broadcaster.qml  CustomLabel.qml  FlickableIndicators.qml  PaintedToolButton.qml  PlasmaTasksModel.qml  main.qml
package/contents/ui/config/: ConfigGeneral.qml
plugin/: CMakeLists.txt
plugin/libdbusmenuqt/: CMakeLists.txt  dbusmenuimporter.cpp
plugin/wm/: waylandwindowmanager.cpp  x11fallbackwindowmanager.cpp  x11fallbackwindowmanager.h
